Added errorExtractor function and error handling logic improved

--- a/views/404.hbs
+++ b/views/404.hbs
@@ -3,5 +3,8 @@
     <p class="display-6 pt-5 pb-5 text-danger text-center">{{error}}</p>
 {{else}}
     <h2 class="text-black text-center">Ooops, error 404</h2>
-    <h3 class="text-black-50 text-center">The page you are looking for doesn't exist!</h3>
+    <h3 class="text-black-50 text-center pb-5">The page you are looking for doesn't exist!</h3>
 {{/if}}
+
+<hr>
+<h4 class="text-black-50 text-center pt-5"><a class="text-black-50 btn btn-outline-info" href="/">Back to BooKing</a></h4>
