--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,4 @@
-<!-- ======= Create Section ======= -->
+<!-- ======= Edit Section ======= -->
 <section id="contact" class="contact">
     <div class="container" data-aos="fade-up">
         <div class="section-title">
@@ -11,7 +11,7 @@
                     <input type="hidden" value="{{room._id}}" name="_id" />
                     <div class="my-3">
                         {{#if error}}
-                            {{#each error}}
+                            {{#each error.messages}}
                                 <div class="error-message">{{this}}</div>
                             {{/each}}
                         {{/if}}
@@ -20,41 +20,46 @@
                     <div class="row mt-3 mb-3 form-group">
                         <div class="input-group mb-1">
                             <label class="input-group-text col-md-2 col-lg-2 col-sm-auto" for="name">Name</label>
-                            <input type="text" name="name" class="form-control" id="name" value="{{room.name}}" />
+                            <input type="text" name="name" id="name" value="{{room.name}}"
+                                class="form-control {{#if error.fields.name}}border-danger{{/if}}" />
                         </div>
                         <div class="input-group mt-1">
                             <label class="input-group-text col-md-2 col-lg-2 col-sm-auto" for="city">Location</label>
-                            <input type="text" class="form-control" name="city" id="city" value="{{room.city}}" />
+                            <input type="text" name="city" id="city" value="{{room.city}}"
+                                class="form-control {{#if error.fields.city}}border-danger{{/if}}" />
                         </div>
                     </div>
 
                     <div class="row mt-3 mb-3 form-group">
                         <div class="input-group w-50">
                             <label class="input-group-text" for="price">Price</label>
-                            <input type="number" name="price" class="form-control" id="price" min="0"
-                                title="Price per Night" step="0.10" value="{{room.price}}" />
+                            <input type="number" name="price" title="Price per Night" step="0.10" value="{{room.price}}"
+                                class="form-control {{#if error.fields.price}}border-danger{{/if}}" id="price" />
                         </div>
                         <div class="input-group w-50">
                             <label class="input-group-text" for="beds">Beds</label>
-                            <input type="number" class="form-control" name="beds" id="beds" title="Number of beds"
-                                value="{{room.beds}}" min="1" max="5" />
+                            <input type="number" name="beds" id="beds" title="Number of beds" value="{{room.beds}}"
+                                class="form-control {{#if error.fields.beds}}border-danger{{/if}}" />
                         </div>
                     </div>
 
                     <div class="row mt-3 mb-3">
                         <div class="form-group">
-                            <input type="text" class="form-control mb-2" name="imageUrl" id="imageUrl"
-                                value="{{room.imageUrl}}" required />
-                            <input type="text" class="form-control mt-2" name="gallery" id="gallery"
-                                value="{{room.gallery}}" />
+                            <input type="text" name="imageUrl" id="imageUrl" value="{{room.imageUrl}}"
+                                class="form-control mb-2 {{#if error.fields.imageUrl}}border-danger{{/if}}" />
+                            <input type="text" name="gallery" id="gallery" value="{{room.gallery}}"
+                                class="form-control mt-2 {{#if error.fields.gallery}}border-danger{{/if}}" />
                         </div>
                     </div>
 
                     <div class="form-group mt-3">
-                        <textarea class="form-control" name="description" rows="6">{{room.description}}</textarea>
+                        <textarea name="description" rows="6" id="description"
+                            class="form-control text-opacity-75 text-dark {{#if error.fields.description}}border-danger{{/if}}">
+                        {{room.description}}
+                        </textarea>
                     </div>
 
-                    <div class="text-center"><button type="submit">Update</button></div>
+                    <div class="text-center"><button type="submit">Update Accommodation</button></div>
                 </form>
             </div>
         </div>
