--- a/views/create.hbs
+++ b/views/create.hbs
@@ -10,7 +10,7 @@
                 <form action="/create" name="submitForm" method="post" class="create-form">
                     <div class="my-3">
                         {{#if error}}
-                            {{#each error}}
+                            {{#each error.messages}}
                                 <div class="error-message">{{this}}</div>
                             {{/each}}
                         {{/if}}
@@ -19,41 +19,47 @@
                     <div class="row mt-3 mb-3 form-group">
                         <div class="input-group mb-1">
                             <label class="input-group-text col-md-2 col-lg-2 col-sm-auto" for="name">Name</label>
-                            <input type="text" name="name" class="form-control" id="name"
-                                placeholder="Accommodation Name" value="{{name}}" />
+                            <input type="text" name="name" id="name" placeholder="Accommodation Name" value="{{name}}"
+                                class="form-control {{#if error.fields.name}}border-danger{{/if}}" />
                         </div>
                         <div class="input-group mt-1">
                             <label class="input-group-text col-md-2 col-lg-2 col-sm-auto" for="city">Location</label>
-                            <input type="text" class="form-control" name="city" id="city" value="{{city}}"
-                                placeholder="Accommodation address">
+                            <input type="text" name="city" id="city" placeholder="Accommodation address"
+                                value="{{city}}" class="form-control {{#if error.fields.city}}border-danger{{/if}}" />
                         </div>
                     </div>
 
                     <div class="row mt-3 mb-3 form-group">
                         <div class="input-group w-50">
                             <label class="input-group-text" for="price">Price</label>
-                            <input type="number" name="price" class="form-control" id="price" min="0"
-                                title="Price per Night" step="0.10" required />
+                            <input type="number" placeholder="Per Night" name="price" id="price" title="Price per Night"
+                                min="0" step="0.10" value="{{price}}"
+                                class="form-control {{#if error.fields.price}}border-danger{{/if}}" />
                         </div>
                         <div class="input-group w-50">
                             <label class="input-group-text" for="beds">Beds</label>
-                            <input type="number" class="form-control" name="beds" id="beds" title="Number of beds"
-                                min="1" max="5" value="{{beds}}" />
+                            <input type="number" name="beds" id="beds" title="Number of beds" value="{{beds}}"
+                                class="form-control {{#if error.fields.beds}}border-danger{{/if}}" />
                         </div>
                     </div>
 
                     <div class="row mt-3 mb-3">
                         <div class="form-group">
-                            <input type="text" class="form-control mb-2" name="imageUrl" id="imageUrl"
-                                placeholder="Cover Image Url" value="{{imageUrl}}" />
-                            <input type="text" class="form-control mt-2" name="gallery" id="gallery"
-                                placeholder="Second Image Url" value="{{gallery}}" />
+                            <input type="text" name="imageUrl" id="imageUrl" placeholder="Cover Image Url"
+                                value="{{imageUrl}}"
+                                class="form-control mb-2 {{#if error.fields.imageUrl}}border-danger{{/if}}" />
+                            <input type="text" name="gallery" id="gallery" placeholder="Second Image Url"
+                                value="{{gallery}}"
+                                class="form-control mt-2 {{#if error.fields.gallery}}border-danger{{/if}}" />
                         </div>
                     </div>
 
                     <div class="form-group mt-3">
-                        <textarea class="form-control" name="description" rows="6"
-                            placeholder="Add an attractive description to your place...">{{description}}</textarea>
+                        <textarea name="description" id="description" rows="6"
+                            placeholder="Add an attractive description to your place..."
+                            class="form-control text-opacity-75 text-dark {{#if error.fields.description}}border-1 border-danger{{/if}}">
+                        {{description}}
+                        </textarea>
                     </div>
 
                     <div class="text-center"><button type="submit">Save</button></div>
