--- a/views/roomNotFound.hbs
+++ b/views/roomNotFound.hbs
@@ -1,3 +1,6 @@
 <h1 class="text-danger text-center"><i class="bx bx-confused bx-lg"></i></h1>
 <h2 class="text-black text-center">Ooops, error 404</h2>
-<h3 class="text-black-50 text-center">Room Not Found!</h3>
+<h3 class="text-black-50 text-center pb-5">Room Not Found!</h3>
+
+<hr>
+<h4 class="text-black-50 text-center pt-5"><a class="text-black-50 btn btn-outline-info" href="/">Back to BooKing</a></h4>
